--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "flesch": "^2.0.0",
     "framer-motion": "^4",
     "moment-timezone": "^0.5.33",
+    "pdf-lib": "^1.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
